samples/_failures_safe/1761244432_3dc1e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb41f343.c: In function ‘main’:
./samples/SAFE/__tmp_fb41f343.c:141:5: error: expected expression at end of input
  141 |     if (scanf("%lf %lf %lf", &user_vec.x, &user_vec.y, &user_vec.z) !=
      |     ^~
./samples/SAFE/__tmp_fb41f343.c:141:5: error: expected declaration or statement at end of input
